examples/test/testpolicy14390.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14390
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key30: value43
      key28: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value43
      podSelector:
        matchLabels:
          key23: value9
          key48: value8
